statum-macros/tests/ui/invalid_legacy_state_helper_traits.stderr
error[E0405]: cannot find trait `StateVariant` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:22:28
   |
22 | fn assert_state_variant<T: StateVariant>() {}
   |                            ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `RequiresStateData` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:24:34
   |
24 | fn assert_requires_state_data<T: RequiresStateData>() {}
   |                                  ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `DoesNotRequireStateData` in this scope
  --> tests/ui/invalid_legacy_state_helper_traits.rs:26:42
   |
26 | fn assert_does_not_require_state_data<T: DoesNotRequireStateData>() {}
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
